--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "A small package to create sql queries from csv files",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "bin": {
+    "@pharzan/csvtosql": "./index.js",
+    "csvtosql": "./index.js"
   },
   "keywords": [
     "sql",
@@ -15,5 +20,13 @@
     "builder"
   ],
   "author": "pharzan",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@pharzan/csv-reader": "^1.0.0",
+    "arg": "^5.0.1",
+    "commander": "^8.3.0",
+    "figlet": "^1.5.2",
+    "knex": "^1.0.3",
+    "node-fetch": "^3.2.0"
+  }
 }
